--- a/dok/src/index.scss
+++ b/dok/src/index.scss
@@ -47,3 +47,94 @@
     margin-right: 12%;
   }
 }
+
+@media only screen and (max-width: 768px) {
+    .main {
+        
+      width: 450px;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: center;
+    }
+    .header{
+        margin: auto;
+     
+        width: 298px;
+        height: 96px;
+        font-family: Roboto;
+        font-size: 24px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #000000;
+        margin-bottom: 30px;
+    }
+    .carsWrapper {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+        width: min-content;
+        height: max-content;
+        box-sizing: content-box;
+        margin-left: 17%;
+        float: none
+    }
+  
+    .newCarsButton {
+      display: block;
+      position: absolute;
+      left: 32%;
+      margin: auto;
+      top: 1740px;
+    }
+    .sparesConteinerCliced {
+      margin-right: 12%;
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .main {
+        
+      width: 320px;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: center;
+    }
+    .header{
+        margin-left: 30%;
+        width: 298px;
+        height: 96px;
+        font-family: Roboto;
+        font-size: 24px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #000000;
+    }
+    .carsWrapper {
+      display: flex;
+      flex-direction: row;
+      height: 100%;
+      width: 300px;
+      box-sizing: content-box;
+      margin-left: 30%;
+      float:none;
+    }
+  
+    .newCarsButton {
+      display: block;
+      position: absolute;
+      left: 32%;
+      margin: auto;
+      top: 1740px;
+    }
+    .sparesConteinerCliced {
+      margin-right: 12%;
+    }
+  }
