--- a/dok/src/index.scss
+++ b/dok/src/index.scss
@@ -42,6 +42,8 @@
     left: 32%;
     margin: auto;
     top: 1740px;
+    margin-bottom: 89px;
+
   }
   .sparesConteinerCliced {
     margin-right: 12%;
@@ -87,8 +89,11 @@
       display: block;
       position: absolute;
       left: 32%;
+      margin-top: 2%;
       margin: auto;
       top: 1740px;
+      margin-bottom: 89px;
+
     }
     .sparesConteinerCliced {
       margin-right: 12%;
@@ -98,14 +103,13 @@
   @media only screen and (max-width: 480px) {
     .main {
         
-      width: 320px;
+      width: 100%;
       display: flex;
       flex-direction: column;
       height: 100%;
       justify-content: center;
     }
     .header{
-        margin-left: 30%;
         width: 298px;
         height: 96px;
         font-family: Roboto;
@@ -123,7 +127,6 @@
       height: 100%;
       width: 300px;
       box-sizing: content-box;
-      margin-left: 30%;
       float:none;
     }
   
@@ -132,6 +135,7 @@
       position: absolute;
       left: 32%;
       margin: auto;
+      margin-bottom: 89px;
       top: 1740px;
     }
     .sparesConteinerCliced {
