--- a/dok/src/components/app/app.scss
+++ b/dok/src/components/app/app.scss
@@ -1,22 +1,23 @@
-.main{
- display: flex;
- flex-direction: column;
- width:auto;
+.main {
+  display: flex;
+  flex-direction: column;
+
+  width: 1000px;
   height: 814px;
   background-color: #ffffff;
   margin: 50px auto;
 }
 
-.newCarsButton{
-  margin-top: 58px;
-  margin-left: 40%;
-  margin-bottom: 100px;
-  padding: 20px 40px 20px 40px;
+.newCarsButton {
   width: 290px;
   height: 60px;
+  margin-top: 56px;
+  margin-bottom: 74px;
   border-radius: 3px;
   background-color: #f5f5f5;
-  
+  p {
+    margin-top: 20px;
+    margin-left: 40px;
     width: 208px;
     height: 20px;
     font-family: Roboto;
@@ -27,5 +28,5 @@
     line-height: 1.25;
     letter-spacing: normal;
     color: #1a77d2;
-  
+  }
 }
