--- a/dok/src/components/spares/spares.scss
+++ b/dok/src/components/spares/spares.scss
@@ -40,7 +40,7 @@
   }
   hr {
     display: block;
-    width: 280px;
+    width: 93%;
     height: 1px;
     opacity: 0.75;
     background-color: #e5e5e5;
