--- a/dok/src/index.scss
+++ b/dok/src/index.scss
@@ -12,11 +12,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
   }
-  hr{
+  hr {
     width: 100%;
   }
   .sparesConteiner:hover {
-  
     margin-top: -12px;
     margin-left: -1px;
   }
@@ -157,13 +156,10 @@
     }
   }
   .sparesConteiner:hover {
-    
     padding-top: 22px;
     margin-top: -11px;
-  
-  
   }
-  .buttonImageWrapperBlue{
+  .buttonImageWrapperBlue {
     padding-left: 100px;
   }
   .sparesConteiner {
@@ -171,7 +167,6 @@
     margin-left: -10px;
     padding-top: 10px;
     padding-left: 7%;
-    
   }
   .header {
     margin-left: 25px;
@@ -186,5 +181,17 @@
     letter-spacing: normal;
     color: #000000;
     margin-bottom: 7px;
+  }
+  .newCarsButton {
+    width: 290px;
+    height: 60px;
+    border-radius: 3px;
+    background-color: #f5f5f5;
+    
+  }
+}
+@media only screen and (max-width: 325px) {
+  .newCarsButton {
+    margin-left: 50px;
   }
 }
