--- a/dok/src/index.scss
+++ b/dok/src/index.scss
@@ -158,6 +158,7 @@
   .sparesConteiner:hover {
     padding-top: 22px;
     margin-top: -12px;
+    margin-left: -10px;
   }
   .buttonImageWrapperBlue {
     padding-left: 100px;
