--- a/dok/src/index.scss
+++ b/dok/src/index.scss
@@ -156,12 +156,16 @@
     }
   }
   .sparesConteiner:hover {
+    min-width: 375px;
     padding-top: 22px;
     margin-top: -12px;
     margin-left: -10px;
   }
   .buttonImageWrapperBlue {
-    padding-left: 100px;
+    .buttonImage{
+      padding-right: 45px;
+    }
+   
   }
   .sparesConteiner {
     width: 100%;
